# books-crud-api

./: db.sqlite3  docker-compose.yaml  dockerfile  pyproject.toml  readme.md
app/: settings.py  urls.py
book/: models.py  urls.py  views.py
book/migrations/: 0001_initial.py
